# encoding

./: encoding.cabal
src/: Encoding1.hs  Encoding2.hs  Encoding3.hs  Encoding4.hs  Encoding5.hs
